<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_desc_null"></string>
	
    <string name="app_name">ABC Financiero</string>
     <string name="app_welcome">Bienvenido a tu diccionario de terminos financieros</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="app_title">ABC</string>
	<string name="app_subtitle">Financiero</string>
	<string name="hint_search">Buscar</string>
</resources>