<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        style="@style/background_header"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            style="@style/logo"
            android:layout_width="76dp"
            android:contentDescription="@string/app_desc_null"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/ImageButton01"
            style="@color/search"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_desc_null"
            android:scaleType="centerInside"
            android:src="@color/inicio" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        style="@style/background_header_menu"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/app_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="5dp"
            android:text="@string/app_subtitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/btnNewWord"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_desc_null"
            android:scaleType="centerInside"
            android:src="@color/edit" />

        <ImageButton
            android:id="@+id/btnSearch"
            style="@color/search"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnNewWord"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_desc_null"
            android:scaleType="centerInside"
            android:src="@color/search"
            />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/btnSearch"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/hint_search"
            android:singleLine="true"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:background="#666666" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:text="@string/app_welcome"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1" >
    </ListView>

</RelativeLayout>